[tool.poetry]
name = "url shortner"
version = "0.1.0"
description = "URL Shortner"
authors = ["Dilip Kumar Sharma <diliplakshya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.core.dependencies]
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
cassandra-driver = "^3.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
