[tool.poetry]
name = "url shortner"
version = "0.1.0"
description = "URL Shortner"
authors = ["Dilip Kumar Sharma <diliplakshya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.core.dependencies]
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
cassandra-driver = "^3.28.0"
pydantic-settings = "^2.0.3"
gunicorn = "^21.2.0"
email-validator = "^2.0.0.post2"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}


[tool.poetry.group.aut-test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
